src/main.css
/*
  elm-hot creates an additional div wrapper around the app to make HMR possible.
  This could break styling in development mode if you are using Elm UI.

  More context in the issue:
    https://github.com/halfzebra/create-elm-app/issues/320
*/
[data-elm-hot="true"] {
  height: inherit;
}

:root {
  --game-width: 450px;
  --present-color: #b59f3b;
  --correct-color: #538d4e;
  --absent-color: #3a3a3c;
  --keyboard-unknown-color: #818384;
  --tile-gutter-width: 5px;
  --max-word-length: 5;
}

* {
  box-sizing: border-box;
}

body {
  font-family: "Source Sans Pro", "Trebuchet MS", "Lucida Grande",
    "Bitstream Vera Sans", "Helvetica Neue", sans-serif;
  margin: 0;
  text-align: center;
  color: white;
  background-color: #121213;
}

h1 {
  font-size: 30px;
}

img {
  margin: 20px 0;
  max-width: 200px;
}

p {
  font-size: 36px;
}

button {
  font-size: 36px;
  min-width: 50px;
}

.game {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  max-width: var(--game-width);
  width: 100%;
  margin: 0 auto;
  height: 100vh;
}

/* Game Board */

.board {
  display: flex;
  flex-direction: column;
  user-select: none;
}

.board .row {
  display: flex;
  margin-bottom: var(--tile-gutter-width);
}

.board .row .tile {
  display: flex;
  border: 2px solid #565758;
  width: calc(85vw / var(--max-word-length));
  max-width: calc(
    (var(--game-width) / var(--max-word-length)) -
      (var(--tile-gutter-width) * (var(--max-word-length) - 1))
  );
  aspect-ratio: 1;
  justify-content: center;
  align-items: center;
  font-size: 3rem;
  text-transform: uppercase;
  background-color: #121213;
  margin-right: var(--tile-gutter-width);
  transition: 0.1s;
}

@keyframes bounce {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  55% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.board .row .tile:empty {
  border-color: var(--absent-color);
}

.board .row .tile:not(.tile:empty) {
  animation-name: bounce;
  animation-duration: 0.2s;
}

.board .row .tile:last-child {
  margin-right: 0;
}

.board .row .tile.absent {
  background-color: var(--absent-color);
  border-color: var(--absent-color);
}

.board .row .tile.present {
  background-color: var(--present-color);
  border-color: var(--present-color);
}

.board .row .tile.correct {
  background-color: var(--correct-color);
  border-color: var(--correct-color);
}

/* Keyboard */

.keyboard {
  width: 90vw;
  max-width: var(--game-width);
}

.keyboard button {
  background-color: var(--keyboard-unknown-color);
  border-radius: 5px;
  border: none;
  color: white;
  text-transform: uppercase;
  font-size: 0.8rem;
  min-width: calc(100% / 11);
  aspect-ratio: 0.74;
  margin-left: 3px;
  margin-right: 3px;
  margin-bottom: 6px;
  cursor: pointer;
  user-select: none;
}

@media screen and (max-width: 500px) {
  .keyboard button {
    aspect-ratio: 0.6;
  }
}

.keyboard > div {
  display: flex;
  justify-content: center;
}

.keyboard button.backspace {
  font-size: 1.2rem;
}

.keyboard button.backspace,
.keyboard button.enter {
  min-width: calc(var(--game-width) / 8);
  aspect-ratio: auto;
}

.keyboard button.absent {
  background-color: var(--absent-color);
}

.keyboard button.present {
  background-color: var(--present-color);
}

.keyboard button.correct {
  background-color: var(--correct-color);
}

.loss-text {
  font-size: 1rem;
}

.toast-container {
  position: fixed;
  top: 180px;
  pointer-events: none;
}

.toast {
  padding: 20px;
  margin-bottom: 10px;
  box-shadow: 0 0 10px black;
  border-radius: 10px;
  background-color: white;
  color: black;
  font-weight: bold;
}

button.share {
  font-family: "Source Sans Pro", "Trebuchet MS", "Lucida Grande", "Bitstream Vera Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  background: var(--correct-color);
  color: white;
  border-radius: 5px;
  border: none;
  padding: 5px;
  margin-top: 20px;
  margin-bottom: 25px;
  width: 145px;
  position: relative;
  text-align: center;
  cursor: pointer;
}

button.share:after {
  display: block;
  visibility: visible;
  position: absolute;
  top: 0;
  left: 0;
  color: white;
  background-color: #121213;
  height: 100%;
  width: 100%;
  font-size: 25px;
  content: "Nice work!";
  pointer-events: none;
  animation-name: fadeout;
  animation-direction: forwards;
  animation-duration: 4s;
  display: flex;
  justify-content: center;
  align-items: center;
  opacity: 0;
}

@keyframes fadeout {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

